Fix comtroller
